--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1> Coding by Jack 2019 for Ellis</h1>
 
 
-<li><a href="https://github.com/Jack080808/jack-coding-ellis-2019">Githum Repository</a>
+<li><a href="https://github.com/Jack080808/jack-coding-ellis-2019">Github Repository</a>
 <li><a href="https://jack080808.github.io/jack-coding-ellis-2019/">This Web Page</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
