--- a/index.html
+++ b/index.html
@@ -9,3 +9,25 @@
 <li><a href="...">...</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
+
+  <input type=text id="myText01" value="3"><br>
+
+<input type=button value="Input/Output" onClick="{
+
+  let myTemp = document.getElementById('myText01').value
+  document.getElementById('myDiv01').innerHTML = myTemp
+
+}">
+
+<div id="myDiv01">...</div>
+
+<input type=text id="myText02" value="3"><br>
+
+<input type=button value="Input/Output" onClick="{
+
+  let myTemp = document.getElementById('myText02').value
+  document.getElementById('myDiv02').innerHTML = myTemp
+
+}">
+
+<div id="myDiv02">...</div>
