--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 <li><a href="https://github.com/Jack080808/jack-coding-ellis-2019">Github Repository</a>
 <li><a href="https://jack080808.github.io/jack-coding-ellis-2019/public/">This Web Page</a>
 <li><a href="t1a03-loops-Jack.html">t1a03-loops-Jack</a>
-<li><a href="...">...</a>
-<li><a href="...">...</a>
+<li><a href="t1a04-Arrays-Jack.html">t1a04-Arrays-Jack</a>
+<li><a href="t1a06-table-lists-Jack.html">t1a06-table-lists-Jack</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
