--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
 <li><a href="...">...</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
-<li><a href="...">...</a>
+<li><a href="t1a14-collisions-jack.html">t1a14-collisions-jack</a>
 <li><a href="...">...</a>
 <li><a href="...">...</a>
