--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,7 @@
 <li><a href="...">...</a>
 <li><a href="t1a14-collisions-jack.html">t1a14-collisions-jack</a>
 <li><a href="...">...</a>
+<li><a href="t2a02-animated-images-jack.html">t2a02-animated-images-jack</a>
+<li><a href="...">...</a><
+<li><a href="...">...</a>
 <li><a href="...">...</a>
